# Framework

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  _config.yml  config.yaml  fix_config.py  gen_conftest.py  gen_contracts.py  gen_errors.py  gen_schemas.py  gen_state.py  gen_store.py  gen_test_config.py  gen_test_malware.py  pyproject.toml  test_config.py  write_config.py  write_contracts.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_vulnerability.yml
.github/workflows/: build.yml  ci.yml  release.yml  test.yml
.opencode/plans/: 2026-07-11-coding-agent-framework.md
.specify/memory/: constitution.md
_layouts/: default.html
assets/css/: custom.css
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
docs/: api_reference.md  architecture.md  index.md
docs/superpowers/plans/: 2026-07-11-coding-agent-framework.md
examples/: quickstart.py
specs/001-coding-agent-framework/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-coding-agent-framework/contracts/: interfaces.md
src/coding_agent/: __init__.py  config.py  contracts.py  errors.py  orchestrator.py  schemas.py  state.py  state_store.py
src/coding_agent/agents/: __init__.py  base.py  coder.py  models.py  planner.py  reviewer.py  tester.py
src/coding_agent/api/: __init__.py  client.py  routes.py  server.py  (+1 more)
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_config.py  test_malware_scanner.py
(+28 files in other folders)
