[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coding-agent"
version = "0.1.0"
description = "Multi-agent system for autonomous code generation, review, and testing"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.1,<3",
    "pyyaml>=6.0,<7",
    "httpx>=0.27,<1",
    "openai>=1.12,<2",
    "fastapi>=0.109,<1",
    "uvicorn[standard]>=0.27,<1",
    "websockets>=12,<13",
    "typer>=0.9,<1",
    "rich>=13,<14",
    "structlog>=24.1,<25",
    "opentelemetry-api>=1.23,<2",
    "opentelemetry-sdk>=1.23,<2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.23,<2",
    "prometheus-client>=0.19,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4.1,<5",
    "hypothesis>=6.98,<7",
    "ruff>=0.2,<1",
    "mypy>=1.8,<2",
    "bandit>=1.7,<2",
    "pytest-httpx>=0.30,<1",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG"]
ignore = ["E501"]
format = {}

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[project.scripts]
coding-agent = "coding_agent.cli.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
